added pfr footer;

--- a/index.html
+++ b/index.html
@@ -8,16 +8,21 @@
     <link rel="stylesheet" href="style/style.css" />
   </head>
   <body>
-    <div class="center">
-      <header>
-        <h1>Zajazd Głębce w Wiśle</h1>
-        <h3>strona w przebudowie</h3>
-      </header>
-      <div class="contact">
-        <p>ul. Głębce</p>
-        <p>43-460 Wisła</p>
-        <p>tel.: <a href="tel:338551495">33 855 14 95</a></p>
+    <main class="cover">
+      <div class="cover__center">
+        <header>
+          <h1>Zajazd Głębce w Wiśle</h1>
+          <h3>strona w przebudowie</h3>
+        </header>
+        <div class="contact">
+          <p>ul. Głębce</p>
+          <p>43-460 Wisła</p>
+          <p>tel.: <a href="tel:338551495">33 855 14 95</a></p>
+        </div>
       </div>
-    </div>
+    </main>
+    <footer class="footer">
+      <div class="footer__image"></div>
+    </footer>
   </body>
 </html>
